--- a/style.css
+++ b/style.css
@@ -55,11 +55,9 @@ a:hover {
   background-position: top center;
 }
 .block {background-color: #f2f2f2;
-  padding: 60px;
-  width:90VW;
-  height: 25vh;
-  margin:0 auto;
-  text-align: center;
+ width: 100vw;
+height: 25vh;
+ text-align: center;
   overflow: hidden;
 }
 .block1 {
@@ -143,7 +141,7 @@ h3 {
     height: 20px;
     text-align: center;
     text-decoration: none;
-    margin: 20px 2px;
+    margin: 20px 0;
     border-radius: 50%;
   }
 
@@ -164,5 +162,6 @@ color: #FFFFFF;
     background-color: #0066FF; opacity: 0.4;
   font-size:20px;
   color: #FFFFFF;
+
 
 }
